==== version history of open-console-core

version 0.02:
	Fixes:

	Improvements:
	- add ::Util::domain_suffix()
	- add ::Proof::Website::hostUTF8()
	- ::Util token work

version 0.01: Wed Sep 09 09:21:50 PM CEST 2024
	- Initial